--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./node_modules/gulp/bin/gulp.js"
+    "start": "node ./node_modules/gulp/bin/gulp.js --gulpfile startproxy.js"
   },
   "repository": {
     "type": "git",
